--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 # _config.yml
 title: Ayesha Akhtar
 email: ayesha.akhtar209@gmail.com
-description: "M.S. Robotics Engineer @ WPI"
+description: "Fulbright Scholar 
+M.S. Robotics Engineering @ WPI"
 theme: jekyll-theme-cayman
 
 # Optional: add your social links to make them appear in the header
