--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # _config.yml
-title: Ayesha Akhtar
-email: ayesha.akhtar209@gmail.com
-description: "Fulbright Scholar 
-M.S. Robotics Engineering @ WPI"
-theme: jekyll-theme-cayman
+#title: Ayesha Akhtar
+#email: ayesha.akhtar209@gmail.com
+#description: "Fulbright Scholar 
+#M.S. Robotics Engineering @ WPI"
+#theme: jekyll-theme-cayman
 
 # Optional: add your social links to make them appear in the header
-github: ayeshakhtar209
-linkedin: ayeshakhtar209
-medium: ayesha.akhtar209
+#github: ayeshakhtar209
+#linkedin: ayeshakhtar209
+#medium: ayesha.akhtar209
